<resources>
    <string name="app_name" translatable="false">BookTask</string>
    <string name="date_format">d MMMM yyyy\'y\'.</string>

    <string name="show_finished_books">Show finished books</string>
    <string name="error">Error</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="hometown">Hometown</string>
    <string name="gender">Gender</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="finished_books_number">Number of books read</string>

    <string name="gender_man">Man</string>
    <string name="gender_woman">Woman</string>

    <string name="first_name_null" translatable="false">Nikita</string>
    <string name="last_name_null" translatable="false">Korikov</string>
    <string name="birthday_null" translatable="false">01.05.1995</string>
    <string name="hometown_null" translatable="false">Perm</string>
    <string name="gender_null" translatable="false">Male</string>
    <string name="email_null" translatable="false">bulbigood@gmail.com</string>
    <string name="phone_number_null" translatable="false">+7 (999) 999 9999</string>
    <string name="finished_books_number_null" translatable="false">5</string>

    <string name="test_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="test_medium" translatable="false">The quick brown fox jumps over the lazy dog</string>
    <string name="test_short" translatable="false">Sample text</string>
</resources>